--- a/LIF_Model.ipynb
+++ b/LIF_Model.ipynb
@@ -75,93 +75,116 @@
       "metadata": {}
     },
     {
-      "cell_type": "code",
-      "source": "%matplotlib inline
-import numpy as np
-import matplotlib.pyplot as plt
-
-# -------------------------------
-# Simulation parameters
-# -------------------------------
-T = 1000.0       # Total simulation time in ms
-dt = 0.1         # Time step in ms
-time = np.arange(0, T + dt, dt)
-num_steps = len(time)
-
-# -------------------------------
-# Neuron parameters (biologically plausible)
-# -------------------------------
-V_rest = -70.0       # Resting membrane potential (mV)
-V_reset = -70.0      # Reset potential after a spike (mV)
-V_threshold = -55.0  # Spike threshold (mV)
-tau_m = 20.0         # Membrane time constant (ms)
-R = 10.0             # Membrane resistance (MΩ)
-# (Note: 1 nA * 10 MΩ = 10 mV depolarization)
-
-def simulate_IF_neuron(I_ext):
-    """
-    Simulate a simple integrate-and-fire neuron with a constant input current I_ext (in nA).
-
-    Parameters:
-        I_ext (float): External input current in nA.
-    
-    Returns:
-        V (ndarray): Membrane potential trace over time.
-        spike_times (list): Times (in ms) when spikes occurred.
-    """
-    V = np.zeros(num_steps)
-    V[0] = V_rest
-    spike_times = []
-
-    for i in range(1, num_steps):
-        # Euler method to update the membrane potential
-        dV = dt / tau_m * (-(V[i-1] - V_rest) + R * I_ext)
-        V[i] = V[i-1] + dV
-
-        # Check if the threshold is crossed
-        if V[i] >= V_threshold:
-            spike_times.append(time[i])
-            V[i] = V_reset  # Reset the potential after a spike
-
-    return V, spike_times
-
-# -------------------------------
-# Part 1: Visualize a single simulation
-# -------------------------------
-I_example = 2.0  # Input current in nA (choose a value above threshold)
-V_example, spikes_example = simulate_IF_neuron(I_example)
-
-plt.figure(figsize=(10, 4))
-plt.plot(time, V_example, label=f'I_ext = {I_example} nA')
-# Mark spike times on the trace
-plt.scatter(spikes_example, [V_threshold]*len(spikes_example), color='red', zorder=5, label='Spikes')
-plt.xlabel('Time (ms)')
-plt.ylabel('Membrane potential (mV)')
-plt.title('Integrate-and-Fire Neuron Simulation')
-plt.legend()
-plt.show()
-
-# -------------------------------
-# Part 2: Analyze firing rate vs. input current (f-I curve)
-# -------------------------------
-I_values = np.linspace(0.5, 2.5, 10)  # Define input currents from 0.5 nA to 2.5 nA
-firing_rates = []
-
-for I_ext in I_values:
-    V, spike_times = simulate_IF_neuron(I_ext)
-    num_spikes = len(spike_times)
-    # Firing rate in Hz: spikes per second (T is in ms)
-    firing_rate = num_spikes / (T / 1000.0)
-    firing_rates.append(firing_rate)
-
-plt.figure(figsize=(8, 4))
-plt.plot(I_values, firing_rates, marker='o')
-plt.xlabel('Input current (nA)')
-plt.ylabel('Firing rate (Hz)')
-plt.title('f-I Curve of the Integrate-and-Fire Neuron')
-plt.show()",
-      "metadata": {}
-    },
+      {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7d4f7c2-1e2e-4f7a-9d2b-39c8b1d7a5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integrate-and-Fire Neuron Simulation\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# If using Jupyter, uncomment the following line\n",
+    "# %matplotlib inline\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Simulation parameters\n",
+    "# -------------------------------\n",
+    "T = 1000.0       # total simulation time in ms\n",
+    "dt = 0.1         # time step in ms\n",
+    "time = np.arange(0, T + dt, dt)\n",
+    "num_steps = len(time)\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Neuron parameters (biologically plausible)\n",
+    "# -------------------------------\n",
+    "V_rest = -70.0       # resting membrane potential (mV)\n",
+    "V_reset = -70.0      # reset potential after a spike (mV)\n",
+    "V_threshold = -55.0  # spike threshold (mV)\n",
+    "tau_m = 20.0         # membrane time constant (ms)\n",
+    "R = 10.0             # membrane resistance (MΩ)\n",
+    "# (Note: 1 nA * 10 MΩ = 10 mV depolarization)\n",
+    "\n",
+    "def simulate_IF_neuron(I_ext):\n",
+    "    \"\"\"\n",
+    "    Simulate a simple integrate-and-fire neuron with a constant input current I_ext (in nA).\n",
+    "    \n",
+    "    Parameters:\n",
+    "        I_ext (float): External input current in nA.\n",
+    "    \n",
+    "    Returns:\n",
+    "        V (ndarray): Membrane potential trace over time.\n",
+    "        spike_times (list): Times (in ms) when spikes occurred.\n",
+    "    \"\"\"\n",
+    "    V = np.zeros(num_steps)\n",
+    "    V[0] = V_rest\n",
+    "    spike_times = []\n",
+    "\n",
+    "    for i in range(1, num_steps):\n",
+    "        # Euler method to update the membrane potential\n",
+    "        dV = dt / tau_m * (-(V[i-1] - V_rest) + R * I_ext)\n",
+    "        V[i] = V[i-1] + dV\n",
+    "\n",
+    "        # Check if the threshold is crossed\n",
+    "        if V[i] >= V_threshold:\n",
+    "            spike_times.append(time[i])\n",
+    "            V[i] = V_reset  # Reset the potential after a spike\n",
+    "\n",
+    "    return V, spike_times\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 1: Visualize a single simulation\n",
+    "# -------------------------------\n",
+    "I_example = 2.0  # Input current in nA\n",
+    "V_example, spikes_example = simulate_IF_neuron(I_example)\n",
+    "\n",
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.plot(time, V_example, label=f'I_ext = {I_example} nA')\n",
+    "# Mark spike times on the trace\n",
+    "plt.scatter(spikes_example, [V_threshold]*len(spikes_example), color='red', zorder=5, label='Spikes')\n",
+    "plt.xlabel('Time (ms)')\n",
+    "plt.ylabel('Membrane potential (mV)')\n",
+    "plt.title('Integrate-and-Fire Neuron Simulation')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 2: Analyze firing rate vs. input current (f-I curve)\n",
+    "# -------------------------------\n",
+    "I_values = np.linspace(0.5, 2.5, 10)  # Input currents from 0.5 nA to 2.5 nA\n",
+    "firing_rates = []\n",
+    "\n",
+    "for I_ext in I_values:\n",
+    "    V, spike_times = simulate_IF_neuron(I_ext)\n",
+    "    num_spikes = len(spike_times)\n",
+    "    firing_rate = num_spikes / (T / 1000.0)  # firing rate in Hz\n",
+    "    firing_rates.append(firing_rate)\n",
+    "\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "plt.plot(I_values, firing_rates, marker='o')\n",
+    "plt.xlabel('Input current (nA)')\n",
+    "plt.ylabel('Firing rate (Hz)')\n",
+    "plt.title('f-I Curve of the Integrate-and-Fire Neuron')\n",
+    "plt.show()\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.x"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+},
 
     {
       "cell_type": "code",
