Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -17,7 +17,7 @@
     "    * Integrate-and-Fire models can be used to understand spiking behaviors of specific neuronal populations. This can be analyzed to see how populations synchronize firing due to a stimulus. \n",
     "2. Neurodegenerative Research \n",
     "    * IFM's can be used to study changes in neuron firing as a result of degenerative diseases such as Parkinsons and Alzheimers. \n",
-    "    * This article talks about modifications made to the integrate-and-fire model to account for metabolic dependencies which are characteristic in certain neurodegenerative disease pathology. https://onlinelibrary.wiley.com/doi/10.1111/ejn.15326 \n",
+    "    * This article talks about modifications made to the integrate-and-fire model to account for metabolic dependencies which are characteristic in certain neurodegenerative disease pathology. https://onlinelibrary.wiley.com/doi/10.1111/ejn.15326 \n"
      ]
   },
   {
