--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -5,13 +5,13 @@
    "id": "986f5fb6-afc8-46d1-b4f2-e6b9578a8b37",
    "metadata": {},
    "source": [
-    "### Group 6: *Maia Barrow, Cianna French, Eden La Kier, Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
+    "## Group 6: *Maia Barrow, Cianna French, Eden La Kier, Sydney Moodie, Wasifa Nasrin, Kelly Stouffer, Vivan Tadakamalla*\n",
     "## Integrate and Fire Model \n",
-    "# Description\n",
+    "### Description\n",
     " An integrated firing model, or IF for short, is one of the most popular models used in computational neuroscience for modeling and analyzing the behavior of neural systems in response to a stimulus. The model primarily focuses on evaulating the relationship between membrane potential and AP spike generation. This model depicts a linear relationship between membrane potential and spike generation, with membrane potential indefinitley increasing/not decaying as incoming inputs are integrated until threshold is reached. The IF model communicates the information carried by a biological neuron as a singular bit, unit, of information: 0 if an AP was not fired and 1 if an AP was fired. The value of the output is only determined by whether or not the membrane potential hit a pre-determined threshold.\n",
-    "# Limitations\n",
+    "### Limitations\n",
     " While useful, the IF model is not the most accurate as it lacks sevral characteristics present in a biological neuron including the natural decay of membrane potential due to leaky ion channels and the presence of voltage gated channels that rapidly change membrane potential once threshold is reached.\n",
-    "# Benefits\n",
+    "### Benefits\n",
     "Some uses of IF models in research:\n",
     "1. Population Activity\n",
     "    * Integrate-and-Fire models can be used to understand spiking behaviors of specific neuronal populations. This can be analyzed to see how populations synchronize firing due to a stimulus. \n",
