--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -139,6 +139,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0fb05b6c-8484-4e66-971a-a3745fe77ef1",
+   "metadata": {},
+   "source": [
+    "## Leaky Integrate and Fire Model\n",
+    "### \n",
+    "####Description\n",
+    " The LIF model is an extention of the IF model that accounts for the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. The LIF model operates almost identically to the IF model with membrane potential increasing as inputs are integrated, the firing of an AP once a pre-determined threshold is reached, and the output of infomation in the form of a bit, either 0 or 1 to represent the firing of an AP. However, because the LIF model accounts for the loss of current, it does not represent the relationship between membrane potential and spike generation as strictly linear.\n"
+    "####Limitations\n",
+    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy. "
+   {
+   "cell_type": "markdown",
    "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
    "metadata": {},
    "source": [
@@ -161,15 +172,7 @@
     "\n"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "0fb05b6c-8484-4e66-971a-a3745fe77ef1",
-   "metadata": {},
-   "source": [
-    "## Leaky Integrate and Fire Model - Part 2 \n",
-    "### \n",
-    " The LIF model illustrates the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. However, while the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy. On the other hand, the HH model shows signal integration (with graded potentials reaching threshold to create action potentials AND a loss of current through leaky channels) AND spike generation with voltage-gated channels. However, the HH model uniformly treats all ions and all parts of the neuron, like the dendrites and the synapse, the same when different ions perform different functions and spatial summation makes integration more complicated."
-   ]
+ ]
   },
   {
    "cell_type": "code",
