--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -145,9 +145,11 @@
     "## Leaky Integrate and Fire Model\n",
     "### \n",
     "####Description\n",
-    " The LIF model is an extention of the IF model that accounts for the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. The LIF model operates almost identically to the IF model with membrane potential increasing as inputs are integrated, the firing of an AP once a pre-determined threshold is reached, and the output of infomation in the form of a bit, either 0 or 1 to represent the firing of an AP. However, because the LIF model accounts for the loss of current, it does not represent the relationship between membrane potential and spike generation as strictly linear.\n"
+    " The LIF model is an extention of the IF model that accounts for the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. The LIF model operates almost identically to the IF model with membrane potential increasing as inputs are integrated, the firing of an AP once a pre-determined threshold is reached, and the output of infomation in the form of a bit, either 0 or 1 to represent the firing of an AP. However, because the LIF model accounts for the loss of current, it does not represent the relationship between membrane potential and spike generation as strictly linear.\n",
     "####Limitations\n",
-    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy. "
+    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy.\n "
+   ]
+  },
    {
    "cell_type": "markdown",
    "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
