Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -291,18 +291,14 @@
    "id": "72f62062-a4de-431c-97f6-2cb143506ff2",
    "metadata": {},
    "source": [
-    "**What changes had to be made to update the model and why?** Initially, a LIF model was made in Part 1. During this stage, we went back and created an IF model in place of the LIF model but reused the previously made LIF model.\n",
-    "\n",
-    "**How did you and/or ChatGPT implement the changes?** This time, we specifically asked ChatGPT to make an IF model with biologically relevant values. The output code was then used for Part 1 of this assignment. This was done by:\n",
+    "**How did you and/or ChatGPT implement the changes to update the IF model into an LIF model?** This time, we specifically asked ChatGPT to make an IF model with biologically relevant values. The output code was then used for Part 1 of this assignment. This was done by:\n",
     "1. the original LIF updating the membrane membrane potential with **dV = dt / tau_m * (-(V[i-1] - V_rest) + R * I_ext)**. Now, the new IF uses: **\"dV = (R * I_ext * dt) / tau_m\"** to remove the leakage (removing **-(V[i-1] - V_rest** so the voltage can get back to rest if there's no current), maintain spike detection and reset, and add an f-i curve analysis.\n",
     "2. Moving the \"spikes.append(time[i])\" **before** the V[i] = V_thr so the voltage would always go back to the resting potential more explicitly, making the neuron more biologically relevant in the LIF and IF models.\n",
     "3. We increased the time constant in Part 1 with **\"tau_m = 30.0\"** while decreasing the current with **\"I_values = np.linspace(0.3, 2.0, 10)\"** to more easily decrease the firing rate and increase the gradual response of the voltage. \n",
     "\n",
     "**Define 'bits' and Shannon's entropy with relation to information theory. Which model contains the most bits? Which model has the highest Shannon's entropy?** Bits are the smallest unit of information, and they can be represented as the number of binary questions it takes to reduce the uncertainty (or information) to 0. Shannon’s entropy describes the amount of uncertainty contained in the problem, and the higher this is, the more uncertainty there is and the more bits are needed, while the lower this is, the less uncertainty there is and the less bits are needed to decode the information in the first place. Both connect to the information theory because information is considered uncertainty, which means more bits = more information = more entropy.\n",
     "Due to having a higher complexity and less efficiency to make, the LIF model has higher entropy than the IF model.\n",
-    "\n",
-    "**In another set of Markdown code reflect on your ability to work collaboratively using Git-Hub. For instance, did you encounter any problems? How did you overcome them? Or are you still unable to make it work?** For this section of the project, our group decided to work collaboratively on the assignment by writing the code and responses to the Markdown questions in a shared Google Doc to make it easier than in the first part of this project. During Part II, we gained experience utilizing the merge feature on GitHub to combine coding files; however, we were challenged by formatting issues with our cells when using this feature. We overcame this by individually uploading our files to the shared repository and downloading the most recently updated version and writing over the last person’s code to add our own contributions, but we found that the navigation of GitHub added around 2 hours to the last submission."
-   ]
+    "\n"
   },
   {
    "cell_type": "markdown",
