Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -155,7 +155,7 @@
    "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
    "metadata": {},
    "source": [
-    "**Looking at the above visualization/based on what you know regarding the LIF model--what aspect of this model is most unlike a real biological neuron? What is missing? Additionally what aspects are like a biological neuron? Compare and Contrast the two.**\n",
+    "**Compare and Contrast the differences between a biological neuron and the LIF model.**\n",
     "\n",
     "Similarities | Differences\n",
     "------------ | -------------\n",
@@ -167,11 +167,7 @@
     "The LIF model stimulates temporal summation of inputs, which is when signals accumulate over a period of time to potentially conduct an action potential, akin to a biological neuron | Biological neurons are influenced by noise and random synaptic inputs, which leads to irregular responses. However, in the LIF model, because it often has predictible behavior, it would not be realistic in this sense.\n",
     "Both LIF model and biological neruons have resting potentials that requires energy to be sustained. In a biological neuron, it is maintained via ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term.\n",
     "\n",
-    "**What was the most challenging aspect of this homework?**\n",
-    "Coming up with the comparisons and contrasts! In addition, getting used to Jupyter and GitHub took a little bit of time!\n",
-    "\n",
-    "**Estimate how long it took you to complete this homework.**It took 3-4 hours collectivley between the work contributed by all groupmates. This was largely due to diffuculties with nativating the platform.\n",
-    "\n"
+    "#### Model\n",
    ]
   },
   {
