Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -167,7 +167,7 @@
     "The LIF model stimulates temporal summation of inputs, which is when signals accumulate over a period of time to potentially conduct an action potential, akin to a biological neuron | Biological neurons are influenced by noise and random synaptic inputs, which leads to irregular responses. However, in the LIF model, because it often has predictible behavior, it would not be realistic in this sense.\n",
     "Both LIF model and biological neruons have resting potentials that requires energy to be sustained. In a biological neuron, it is maintained via ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term.\n",
     "\n",
-    "#### Model\n",
+    "#### Model\n"
    ]
   },
   {
