Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -12,7 +12,6 @@
     "#### Limitations\n",
     " While useful, the IF model is not the most accurate as it lacks sevral characteristics present in a biological neuron including the natural decay of membrane potential due to leaky ion channels and the presence of voltage gated channels that rapidly change membrane potential once threshold is reached.\n",
     "#### Benefits\n",
-    "The IF model is the simplist neuronal model and therefore is the most concise and and least complex neural model. By stripping away some aspects of a biological neuron, the IF model is able to provide basic insights bout the relationship between membrane potential and spike generation.\n",
     "Some uses of IF models in research:\n",
     "1. Population Activity\n",
     "    * Integrate-and-Fire models can be used to understand spiking behaviors of specific neuronal populations. This can be analyzed to see how populations synchronize firing due to a stimulus. \n",
@@ -148,8 +147,27 @@
     "####Description\n",
     " The LIF model is an extention of the IF model that accounts for the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. The LIF model operates almost identically to the IF model with membrane potential increasing as inputs are integrated, the firing of an AP once a pre-determined threshold is reached, and the output of infomation in the form of a bit, either 0 or 1 to represent the firing of an AP. However, because the LIF model accounts for the loss of current, it does not represent the relationship between membrane potential and spike generation as strictly linear.\n",
     "####Limitations\n",
-    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy.\n ",
-    "####Benefits\n",
+    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy.\n "
+   ]
+  },
+   {
+   "cell_type": "markdown",
+   "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
+   "metadata": {},
+   "source": [
+    "**Compare and Contrast the differences between a biological neuron and the LIF model.**\n",
+    "\n",
+    "Similarities | Differences\n",
+    "------------ | -------------\n",
+    "The LIF and biological neuron both have leaky channels, showing a loss of current. | The biological neuron also loses current in other ways, such as constantly through the chemical synapse, at the gap junction of electrical synapses, or when neurotransmitters don't bind to receptors. On the other hand, the LIF doesn't show that. \n",
+    "The LIF and biological neuron show that threshold should be crossed before an action potential can be made. | However, spike generation is not detailed in the LIF model, thus excluding voltage-gated ion channels. The biological neuron demonstrates this though. \n",
+    "With more current typically comes faster voltage because more ions are following through the neuron/circuit. | Because the biological neuron's refractory periods are based on the inactivation and closing of voltage-gated sodium channels, this is harder to represent in the LIF model. \n",
+    "Similar to the process of summation within biological neurons, the LIF model has a similar feature that integrates IPSPs and EPSPs over a set amount of time to produce a gicen output | The LIF model is not complex enough to replicate the spatial structure of the neuron, oversimplifying it as a single pouint rather than multiple parts like the soma, axon, and dendrites. There may be issues with accuracy due to the lack of spatially dependent integration.\n",
+    "The LIF model and biological model both incorperate the use of temporal coding and summation, relying on this synchronization feature to time when the action potential fires | The LIF model has no way of representing the biological process of synaptic plasticity or learned behavior, which would theoretically result in increased efficency.\n",
+    "The LIF model stimulates temporal summation of inputs, which is when signals accumulate over a period of time to potentially conduct an action potential, akin to a biological neuron | Biological neurons are influenced by noise and random synaptic inputs, which leads to irregular responses. However, in the LIF model, because it often has predictible behavior, it would not be realistic in this sense.\n",
+    "Both LIF model and biological neruons have resting potentials that requires energy to be sustained. In a biological neuron, it is maintained via ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term.\n",
+    "\n",
+    "#### Model\n"
    ]
   },
   {
@@ -262,26 +280,6 @@
     "input_currents = [1.0, 2.5, 5.0]  # Input currents in nA\n",
     "for input_current in input_currents:\n",
     "    run_simulation_and_plot(input_current)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
-   "metadata": {},
-   "source": [
-    "**Compare and Contrast the differences between an LIF model and an IF model.**\n",
-    "\n",
-    "Similarities | Differences\n",
-    "------------ | -------------\n",
-    "The LIF and biological neuron both have leaky channels, showing a loss of current. | The biological neuron also loses current in other ways, such as constantly through the chemical synapse, at the gap junction of electrical synapses, or when neurotransmitters don't bind to receptors. On the other hand, the LIF doesn't show that. \n",
-    "The LIF and biological neuron show that threshold should be crossed before an action potential can be made. | However, spike generation is not detailed in the LIF model, thus excluding voltage-gated ion channels. The biological neuron demonstrates this though. \n",
-    "With more current typically comes faster voltage because more ions are following through the neuron/circuit. | Because the biological neuron's refractory periods are based on the inactivation and closing of voltage-gated sodium channels, this is harder to represent in the LIF model. \n",
-    "Similar to the process of summation within biological neurons, the LIF model has a similar feature that integrates IPSPs and EPSPs over a set amount of time to produce a gicen output | The LIF model is not complex enough to replicate the spatial structure of the neuron, oversimplifying it as a single pouint rather than multiple parts like the soma, axon, and dendrites. There may be issues with accuracy due to the lack of spatially dependent integration.\n",
-    "The LIF model and biological model both incorperate the use of temporal coding and summation, relying on this synchronization feature to time when the action potential fires | The LIF model has no way of representing the biological process of synaptic plasticity or learned behavior, which would theoretically result in increased efficency.\n",
-    "The LIF model stimulates temporal summation of inputs, which is when signals accumulate over a period of time to potentially conduct an action potential, akin to a biological neuron | Biological neurons are influenced by noise and random synaptic inputs, which leads to irregular responses. However, in the LIF model, because it often has predictible behavior, it would not be realistic in this sense.\n",
-    "Both LIF model and biological neruons have resting potentials that requires energy to be sustained. In a biological neuron, it is maintained via ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term.\n",
-    "\n",
-    "#### Model\n"
    ]
   },
   {
