Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -302,7 +302,7 @@
    "id": "bbe8f7ba-ac6b-439a-a8f0-2b450bee0c19",
    "metadata": {},
    "source": [
-    "# Integrate & Fire Model + LIF Model - Part 3"
+    "# Integrate & Fire Model + LIF Model - Simple Neural Network"
    ]
   },
   {
