--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -146,16 +146,11 @@
     "### \n",
     "####Description\n",
     " The LIF model is an extention of the IF model that accounts for the loss of current through leaky channels, thus promoting more accuracy between electrical and biological representations of neurons. The LIF model operates almost identically to the IF model with membrane potential increasing as inputs are integrated, the firing of an AP once a pre-determined threshold is reached, and the output of infomation in the form of a bit, either 0 or 1 to represent the firing of an AP. However, because the LIF model accounts for the loss of current, it does not represent the relationship between membrane potential and spike generation as strictly linear.\n",
+    "####Benefits\n",
+    "The LIF model is more accurate than the IF model and can be used when a relatively more biologically accurate model is needed. It illustrates the non linear relationship between membrane potential and spike generation that exists in the real world.\n",
     "####Limitations\n",
-    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy.\n "
-   ]
-  },
-   {
-   "cell_type": "markdown",
-   "id": "9af1d146-b43f-44ae-9265-071cd4e84865",
-   "metadata": {},
-   "source": [
-    "**Compare and Contrast the differences between a biological neuron and the LIF model.**\n",
+    "While the LIF model identifies signal integration to reach threshold, it does not show spike generation with voltage-gated channels at all, reducing its biological accuracy.\n ",
+    "**Compare and Contrast the differences between an LIF model and an IF model.**\n",
     "\n",
     "Similarities | Differences\n",
     "------------ | -------------\n",
@@ -167,7 +162,7 @@
     "The LIF model stimulates temporal summation of inputs, which is when signals accumulate over a period of time to potentially conduct an action potential, akin to a biological neuron | Biological neurons are influenced by noise and random synaptic inputs, which leads to irregular responses. However, in the LIF model, because it often has predictible behavior, it would not be realistic in this sense.\n",
     "Both LIF model and biological neruons have resting potentials that requires energy to be sustained. In a biological neuron, it is maintained via ion pumps whereas in the LIF model, it is shown as a constant rmp. | The LIF model does not account for the different ion pumps and simplifies it to a single leakage term.\n",
     "\n",
-    "#### Model\n"
+   "#### Model\n"
    ]
   },
   {
