--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -272,7 +272,7 @@
    "source": [
     "**Compare and Contrast the differences between an LIF model and an IF model.**\n",
     "\n",
-    "Category | Similarities | Differences\n",
+    " | Category | Similarities | Differences\n",
     " ------------ | ------------ | -------------\n",
     " Firing Mechanism | Both models are able to generate an action potential when the membrane potential reaches a threshold. | The IF model does not account for leakage, while the LIF model introduces a decay term that reduces membrane potential over time.\n",
     " Input Integration | Both accumulate incoming synaptic inputs -- current or voltage -- over time, summing excitatory and inhibitory signals. | The IF model acts as if the neuron is a perfect integrator, storing all input indefinitely without a decay. However, the LIF model has a leakage factor that causes the potentials to decay over time.\n",
