Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -270,8 +270,8 @@
    "id": "72f62062-a4de-431c-97f6-2cb143506ff2",
    "metadata": {},
    "source": [
-     "Similarities | Differences\n",
-    "------------ | -------------\n",
+     "Category | Similarities | Differences\n",
+    "------------ | ------------ | -------------\n",
     "The LIF and biological neuron both have leaky channels, showing a loss of current. | The biological neuron also loses current in other ways, such as constantly through the chemical synapse, at the gap junction of electrical synapses, or when neurotransmitters don't bind to receptors. On the other hand, the LIF doesn't show that. \n",
     "The LIF and biological neuron show that threshold should be crossed before an action potential can be made. | However, spike generation is not detailed in the LIF model, thus excluding voltage-gated ion channels. The biological neuron demonstrates this though. \n",
     "With more current typically comes faster voltage because more ions are following through the neuron/circuit. | Because the biological neuron's refractory periods are based on the inactivation and closing of voltage-gated sodium channels, this is harder to represent in the LIF model. \n",
