Update Final Submission Update (1) (1).ipynb

--- a/Final Submission Update (1) (1).ipynb
+++ b/Final Submission Update (1) (1).ipynb
@@ -270,6 +270,7 @@
    "id": "72f62062-a4de-431c-97f6-2cb143506ff2",
    "metadata": {},
    "source": [
+    "**What are some similarities and differences of the LIF and IF models?\n",
      " Similarities | Differences\n",
     " ------------ | -------------\n",
     "The LIF and biological neuron both have leaky channels, showing a loss of current. | The biological neuron also loses current in other ways, such as constantly through the chemical synapse, at the gap junction of electrical synapses, or when neurotransmitters don't bind to receptors. On the other hand, the LIF doesn't show that. \n",
